--- a/style.css
+++ b/style.css
@@ -714,3 +714,22 @@ h3 {
   color: #e3b873;
   text-shadow: 0px 3px 10px rgba(227, 184, 115, 0.15);
 }
+
+/*====================WILDEST FANTASIES====================*/
+
+.fantasies-header {
+  font-family: 'Yeseva One';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 27px;
+  line-height: 37px;
+  text-transform: uppercase;
+  color: #E3B873;
+}
+
+.fantasies {
+  background-image: url(images/fantasies.jpg);
+  background-size: cover;
+  height: 864px;
+  position: relative;
+}
