--- a/style.css
+++ b/style.css
@@ -3,9 +3,15 @@
   padding: 0;
   box-sizing: border-box;
 }
-
+html {
+  scroll-behavior: smooth;
+}
 :root {
   --index: calc(1vw + 1vh)
+}
+
+button {
+  cursor: pointer;
 }
 
 body {
@@ -36,23 +42,23 @@ body {
   text-transform: uppercase;
 }
 
-.header {
+.header, .footer {
   background-color: #131313;
 }
 
-.header-content {
+.header-content, .footer-content {
   display: flex;
   justify-content: space-between;
   height: 83px;
   align-items: center;
 }
 
-.header-navigation {
+.header-navigation, .footer-navigation {
   list-style: none;
   display: flex;
 }
 
-.header-navigation__item {
+.header-navigation__item, .footer-navigation__item {
   margin-left: 47px;
 }
 
@@ -65,14 +71,14 @@ body {
   color: #e3b873;
 }
 
-.header-navigation__item a {
+.header-navigation__item a, .footer-navigation__item a {
   text-decoration: none;
   color: white;
   font-size: 11px;
   line-height: 15px;
 }
 
-.header-navigation__item a:hover {
+.header-navigation__item a:hover, .footer-navigation__item a:hover {
   color: #e3b873;
 }
 
@@ -816,4 +822,277 @@ h3 {
   width: 354px;
   height: 625px;
   margin-top: 40px;
+}
+
+/*====================OUR CLIENTS====================*/
+.clients {
+  height: 1000px;
+}
+.our-clients {
+  margin-top: 100px;
+}
+.clients-header {
+  text-align: center;
+}
+
+.clients-h2 {
+  margin-bottom: 13px;
+  font-family: 'Yeseva One';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #181818;
+}
+
+.clients-p {
+  font-family: 'Nunito Sans';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 29px;
+  text-align: center;
+  color: #363636;
+  margin-top: 24px;
+}
+.clients-container {
+  margin-top: 39px;
+  display: flex;
+  justify-content: center;
+  gap: 54px;
+}
+.clients-card {
+  background-color: #FFFFFF;
+  box-shadow: 0px 10px 50px rgba(0, 0, 0, 0.04);
+  height: 428px;
+  width: 376px;
+}
+
+.clients-card-header {
+  margin-top: 24px;
+  display: flex;
+  align-items: center;
+}
+.clients-image {
+  margin-left: 20px;
+  border-radius: 50%;
+}
+.clients-name {
+  margin-left: 25px;
+  font-family: 'Yeseva One';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 23px;
+  color: #181818;
+}
+.clients-card-text {
+  margin: 0 auto;
+  width: 324px;
+  margin-top: 35px;
+  font-family: 'Nunito Sans';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 23px;
+  color: #959595;
+}
+.clients-button {
+  margin-top: 55px;
+  height: 54px;
+  width: 293.7528076171875px;
+  background-color: #E3B873;
+  box-shadow: 5px 5px 20px rgba(227, 184, 115, 0.5);
+  border: none;
+}
+.button-staff {
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  gap: 14px;
+}
+.button-staff-text {
+  font-family: 'Yeseva One';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 24px;
+  text-transform: uppercase;
+  color: #FFFFFF;
+}
+.bg-clients {
+  opacity: 0.05;
+  background-image: url(svg/bigcity.svg);
+  height: 400px;
+}
+
+/*====================CONTACTS====================*/
+
+.contacts {
+  position: relative;
+  height: 953px;
+  background-size: cover;
+  background-image: linear-gradient(180deg, rgb(10, 10, 10) 3.47%,
+   rgba(16, 16, 16, 0.72) 100%), url('images/contacts.jpg');
+}
+.contacts-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.contacts-form {
+  position: relative;
+  margin-top: -220px;
+  height: 445.3192138671875px;
+  width: 883px;
+  background-color: #181818;
+}
+
+.contacts-form-text {
+  margin-top: 29px;
+  font-family: 'Yeseva One';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 28px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #FFFFFF;
+}
+
+.contacts-name-phone {
+  display: flex;
+  margin-top: 45px;
+  justify-content: center;
+  gap: 50px;
+}
+
+.contacts-question-form {
+  display: flex;
+  margin-top: 45px;
+  justify-content: center;
+}
+
+.contacts-label {
+  
+  font-family: "Nunito Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 21px;
+  color: rgba(255, 255, 255, 0.5);
+}
+
+.contacts-input {
+  
+  background: none;
+  font-family: "Nunito Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 23px;
+  color: #fff;
+  border: none;
+  border-bottom: 1px solid #ffffff26;
+  width: 231px;
+}
+.contacts-input-question {
+  background: none;
+  font-family: "Nunito Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 23px;
+  color: #fff;
+  border: none;
+  border-bottom: 1px solid #ffffff26;
+  width: 516.82px;
+}
+
+.contacts-input::placeholder {
+  color: #ffffff;
+}
+.contacts-input-question::placeholder {
+  color: #ffffff;
+}
+
+.contacts-checkbox {
+  text-align: center;
+  margin-top: 50px;
+  margin-left: 49px;
+}
+
+.label {
+  cursor: pointer;
+}
+
+.checkbox {
+  display: none;
+}
+
+.fake {
+  display: inline-flex;
+  width: 18px;
+  height: 18px;
+  background: #e3b873;
+  color: #fff;
+  justify-content: center;
+}
+
+.fake::before {
+  content: "\2714";
+  opacity: 0;
+  transition: 0.2s;
+}
+
+.checkbox:checked + .fake::before {
+  opacity: 1;
+}
+
+.text {
+  font-family: "Nunito Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 23px;
+  color: #ffffff;
+}
+
+.form-button {
+  text-align: center;
+}
+.contacts-button-form {
+  margin-top: 39px;
+}
+
+
+
+.map-header {
+  margin-top: 52px;
+  font-family: 'Yeseva One';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 28px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #E3B873;
+}
+.img-map {
+  text-align: center;
+  margin-top: 26px;
+}
+.map-image {
+  margin-top: 43px;
+  background-image: url(images/map.jpg);
+  width: 925px;
+  height: 465px;
+}
+
+
+
+@media (max-width: 1250px;) {
+  
 }
